# cdp-bridge-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
doc/: README_EN.md  tmwebdriver_sop.md
scripts/: publish.sh  sync-version.py
src/cdp_bridge/: TMWebDriver.py  __init__.py  server.py  simphtml.py  snapshot.py
src/cdp_bridge/sop/: tmwebdriver_sop.md
src/cdp_bridge/tmwd_cdp_bridge/: __init__.py  background.js  config.js  content.js  manifest.json  popup.html  popup.js
tests/: conftest.py  test_snapshot.py
